<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"

    tools:context=".Settings.view.SettingsScreenFragment">

    <LinearLayout
        android:id="@+id/linear_layout_cards"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/linear_layout_cards2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <!-- First Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"

            android:backgroundTint="@color/navyBlue"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/location_mode"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radio_group_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_GPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps"
                    android:textStyle="italic"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textStyle="italic"

                    android:textColor="@color/white" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <!-- Second Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_language"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"

            android:backgroundTint="@color/navyBlue"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/language"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radio_group_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textStyle="italic"

                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textStyle="italic"
                    android:textColor="@color/white" />


            </RadioGroup>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_cards2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="172dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- First Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_temperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"

            android:backgroundTint="@color/navyBlue"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/temperature"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radio_group_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textStyle="italic"

                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:textStyle="italic"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:textStyle="italic"
                    android:textColor="@color/white" />


            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <!-- Second Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_wind"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"

            android:backgroundTint="@color/navyBlue"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/wind_speed"

                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radio_group_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_mil_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles_hour"
                    android:textStyle="italic"

                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_meter_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter_sec"
                    android:textStyle="italic"
                    android:textColor="@color/white" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>